# spectrometer

./: pyproject.toml  readme.md
spectrometer/: __init__.py
spectrometer/filterbank/: __init__.py  analysis.py
spectrometer/filterbank/components/: __init__.py  filterbank.py  filters.py
spectrometer/mkid/: kid_encoding_script.py  kidencoding.py  make_kidlist_D2.1.py
spectrometer/physics/: __init__.py
spectrometer/tline/: components.py  transformations.py
spectrometer/utils/: fit.py  utils.py
tests/: sample_filterbank.py
tests/files/: test_config.toml
